--- a/api-service-client/pom.xml
+++ b/api-service-client/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.kidscademy</groupId>
 		<artifactId>api-service</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>api-service-client</artifactId>
 	<packaging>jar</packaging>
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.kidscademy</groupId>
 			<artifactId>api-service-model</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
