--- a/api-service-model/pom.xml
+++ b/api-service-model/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.kidscademy</groupId>
 		<artifactId>api-service</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>api-service-model</artifactId>
 	<packaging>jar</packaging>
